--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
+    "react-day-and-night-toggle": "^2.0.7",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
