--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-day-and-night-toggle": "^2.0.7",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
